Check update for tomorrow

--- a/Watermarking.ipynb
+++ b/Watermarking.ipynb
@@ -156,7 +156,7 @@
     "            pic = Image.open(i)\n",
     "            picw, pich = pic.size\n",
     "            pic.paste(plogo, (picw - plogow, pich - plogoh), plogo)\n",
-    "            pic.save('Pancita '+ i)\n",
+    "            pic.save('Pancitas '+ i)\n",
     "            \n",
     "        else:\n",
     "            pass\n",
