--- a/Email Protocol.ipynb
+++ b/Email Protocol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,9 @@
     "from email.mime.text import MIMEText\n",
     "from email.mime.image import MIMEImage\n",
     "from email.mime.multipart import MIMEMultipart\n",
-    "import datetime"
+    "import datetime\n",
+    "from email.mime.base import MIMEBase\n",
+    "import email.encoders as Encoders"
    ]
   },
   {
@@ -275,12 +277,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def SendMail3():\n",
+    "\n",
+    "    msg = MIMEMultipart()\n",
+    "    msg['Subject'] = 'prueba'\n",
+    "    msg['From'] = 'fapb88ve@gmail.com'\n",
+    "    msg['To'] = 'fapb88ve@gmail.com'\n",
+    "    text = MIMEText(\"test\")\n",
+    "    msg.attach(text)\n",
+    "    part = MIMEBase('application', \"octet-stream\")\n",
+    "    fo=open('ADRIANA GRAELL WK27_0013.mpg',\"rb\")\n",
+    "    part.set_payload(fo.read() )\n",
+    "    Encoders.encode_base64(part)\n",
+    "    part.add_header('Content-Disposition', 'attachment; filename=\"%s\"' % os.path.basename('ADRIANA GRAELL WK27_0013.mpg'))\n",
+    "    msg.attach(part)\n",
+    "    s = smtplib.SMTP('smtp.gmail.com', 587)\n",
+    "    s.ehlo()\n",
+    "    s.starttls()\n",
+    "    s.login('fapb88ve@gmail.com', 'rabbitrun88ve')\n",
+    "    s.sendmail('fapb88ve@gmail.com', 'fapb88ve@gmail.com', msg.as_string())\n",
+    "    s.quit()\n",
+    "    \n",
+    "SendMail3()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def SendMail4(send_list, files):\n",
+    "    \n",
+    "    msg = MIMEMultipart()\n",
+    "    msg['Subject'] = 'prueba'\n",
+    "    msg['From'] = 'fapb88ve@gmail.com'\n",
+    "    msg['To'] = 'fapb88ve@gmail.com'\n",
+    "    text = MIMEText(\"test\")\n",
+    "    msg.attach(text)\n",
+    "    for i in files:\n",
+    "        if 'mp4' in i:\n",
+    "            part = MIMEBase('application', \"octet-stream\")\n",
+    "            fo=open('ADRIANA GRAELL WK27_0013.mpg',\"rb\")\n",
+    "            part.set_payload(fo.read() )\n",
+    "            Encoders.encode_base64(part)\n",
+    "            part.add_header('Content-Disposition', 'attachment; filename=\"%s\"' % os.path.basename('ADRIANA GRAELL WK27_0013.mpg'))\n",
+    "            msg.attach(part)\n",
+    "        if 'jpg' in i:\n",
+    "            img_data = open(k, 'rb').read()\n",
+    "            image = MIMEImage(img_data, name=os.path.basename(k))\n",
+    "            msg.attach(image)\n",
+    "    s = smtplib.SMTP('smtp.gmail.com', 587)\n",
+    "    s.ehlo()\n",
+    "    s.starttls()\n",
+    "    s.login('fapb88ve@gmail.com', 'rabbitrun88ve')\n",
+    "    s.sendmail('fapb88ve@gmail.com', 'fapb88ve@gmail.com', msg.as_string())\n",
+    "    s.quit()\n",
+    "    \n",
+    "SendMail4()"
+   ]
   }
  ],
  "metadata": {
