--- a/PCode.ipynb
+++ b/PCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,8 @@
     "from PIL import Image \n",
     "import imageio\n",
     "imageio.plugins.ffmpeg.download()\n",
-    "from moviepy.editor import *"
+    "from moviepy.editor import *\n",
+    "client = dropbox.client.DropboxClient('IS-424yqxy8AAAAAAAAVLOUS9urGIH4kCxP_5Q6hxdz-WrhGMYKa-9MjMZrpwMYZ')"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -310,41 +311,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "SendMail4() missing 2 required positional arguments: 'send_list' and 'files'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-92eb290d123d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0mSendMail4\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: SendMail4() missing 2 required positional arguments: 'send_list' and 'files'"
+     ]
+    }
+   ],
    "source": [
-    "def SendMail():\n",
+    "def SendMail4(send_list, files):\n",
+    "    \n",
+    "    msg = MIMEMultipart()\n",
+    "    msg['Subject'] = 'prueba'\n",
+    "    msg['From'] = 'fapb88ve@gmail.com'\n",
+    "    msg['To'] = 'fapb88ve@gmail.com'\n",
+    "    text = MIMEText(\"test\")\n",
+    "    msg.attach(text)\n",
+    "    for i in files:\n",
+    "        if 'mp4' in i:\n",
+    "            part = MIMEBase('application', \"octet-stream\")\n",
+    "            fo=open('ADRIANA GRAELL WK27_0013.mpg',\"rb\")\n",
+    "            part.set_payload(fo.read() )\n",
+    "            Encoders.encode_base64(part)\n",
+    "            part.add_header('Content-Disposition', 'attachment; filename=\"%s\"' % os.path.basename('ADRIANA GRAELL WK27_0013.mpg'))\n",
+    "            msg.attach(part)\n",
+    "        if 'jpg' in i:\n",
+    "            img_data = open(k, 'rb').read()\n",
+    "            image = MIMEImage(img_data, name=os.path.basename(k))\n",
+    "            msg.attach(image)\n",
     "    s = smtplib.SMTP('smtp.gmail.com', 587)\n",
     "    s.ehlo()\n",
     "    s.starttls()\n",
-    "    s.ehlo()\n",
-    "    s.login(fr, 'rabbitrun88ve')\n",
+    "    s.login('fapb88ve@gmail.com', 'rabbitrun88ve')\n",
+    "    s.sendmail('fapb88ve@gmail.com', 'fapb88ve@gmail.com', msg.as_string())\n",
+    "    s.quit()\n",
     "    \n",
-    "    lp = os.listdir(os.getcwd())[1:9]\n",
-    "    \n",
-    "    emails = ['fapb88ve@gmail.com', 'vcalzadillag@gmail.com', 'balestrinisamuel@gmail.com']\n",
-    "    for i in emails:\n",
-    "        msg = MIMEMultipart()\n",
-    "        msg['Subject'] = 'prueba'\n",
-    "        msg['From'] = fr\n",
-    "        msg['To'] = i\n",
-    "        text = MIMEText(\"test\")\n",
-    "        msg.attach(text)\n",
-    "        for k in lp:\n",
-    "            if '.JPG' in k:\n",
-    "                img_data = open(k, 'rb').read()\n",
-    "                image = MIMEImage(img_data, name=os.path.basename(k))\n",
-    "                msg.attach(image)\n",
-    "            else:\n",
-    "                pass\n",
-    "        s.sendmail(fr, i, msg.as_string())\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    s.quit()"
+    "SendMail4()"
    ]
   },
   {
@@ -358,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -398,22 +410,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\Frank Pinto\\\\desktop\\\\pds\\\\Pancitas\\\\Pancitas Ultrasound Aba Duenas'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def dl_files(x):\n",
     "    client = dropbox.client.DropboxClient('IS-424yqxy8AAAAAAAAVLOUS9urGIH4kCxP_5Q6hxdz-WrhGMYKa-9MjMZrpwMYZ')\n",
@@ -434,34 +435,17 @@
     "            out.close()\n",
     "        os.chdir('..\\\\')    \n",
     "    return \n",
-    "\n",
-    "def ul_files():\n",
-    "    dirlst = next(os.walk('.'))[1]\n",
-    "    links = []\n",
-    "    for i in dirlst:\n",
-    "        if \"Pancitas\" in i:\n",
-    "            db_path = '/' + i\n",
-    "            cwd = '.\\\\' + i\n",
-    "            os.chdir(cwd)\n",
-    "            filist = os.listdir(cwd)\n",
-    "            watermark(filist)\n",
-    "            for k in os.getcwd(cwd):\n",
-    "                if 'Pancitas' in k:\n",
-    "                    f = open(k, 'rb')\n",
-    "                    response = client.put_file(db_path + i, f)\n",
-    "                else:\n",
-    "                    os.remove(k)\n",
-    "            \n",
-    "            \n",
-    "            link = client.share(db_path, short_url = False)[0] + '1'\n",
-    "            links.append([i, link])\n",
-    "            os.remove(i)\n",
-    "    return dirlst\n",
-    " \n",
-    "#dl_files(files())\n",
-    "#ul_files()\n",
-    "os.getcwd()"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -474,31 +458,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'datetime.time' and 'datetime.timedelta'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-06133a98b253>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnow\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mlapse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mfull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-20-06133a98b253>\u001b[0m in \u001b[0;36mfull\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mnow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutcnow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mlapse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtimedelta\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mminutes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m15\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnow\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mlapse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mfull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'datetime.time' and 'datetime.timedelta'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def full():\n",
-    "    now = datetime.datetime.utcnow().time()\n",
-    "    lapse = datetime.timedelta(minutes = 15)\n",
-    "    print(now + lapse)  \n",
-    "\n",
-    "full()"
+    "    client = dropbox.client.DropboxClient('IS-424yqxy8AAAAAAAAVLOUS9urGIH4kCxP_5Q6hxdz-WrhGMYKa-9MjMZrpwMYZ')\n",
+    "    sup_em = input()\n",
+    "    \n",
+    "    while datetime.datetime.now() <\n",
+    "      \n",
+    "\n"
    ]
   },
   {
