--- a/Code/Untitled.ipynb
+++ b/Code/Untitled.ipynb
@@ -100,7 +100,7 @@
     "        for j in next(os.walk('.'))[1]:\n",
     "            if clients.Nombre.loc[i] in j:\n",
     "                send[clients.Email.loc[i]] = j\n",
-    "    for i in next(os.walk('.'))[1]:\n",
+    "    for i in send.keys():\n",
     "    msg = MIMEMultipart()\n",
     "    msg['Subject'] = 'prueba'\n",
     "    msg['From'] = 'fapb88ve@gmail.com'\n",
@@ -183,20 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'fapb88ve@gmail.com': 'Pancitas Ultrasound Aba Duenas'}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-00b87d9bd098>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0msend\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msend\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
     }
    ],
    "source": [
@@ -210,7 +211,8 @@
     "    for j in next(os.walk('.'))[1]:\n",
     "        if clients.Nombre.loc[i] in j:\n",
     "            send[clients.Email.loc[i]] = j\n",
-    "send"
+    "send\n",
+    "\n"
    ]
   }
  ],
