worked on limit for email attachment

--- a/Code/Untitled1.ipynb
+++ b/Code/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -24,6 +24,8 @@
     "import datetime\n",
     "from email.mime.base import MIMEBase\n",
     "import email.encoders as Encoders\n",
+    "import math\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "def files():\n",
@@ -484,27 +486,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Frank Pinto\\desktop\\pds\\Pancitas\\Code\\Clients\\Pancitas Ultrasound Aba Duenas\n",
-      "0.04\n",
-      "0.15\n",
-      "0.04\n",
-      "0.04\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(os.getcwd())\n",
-    "for i in os.listdir(os.getcwd()):\n",
-    "    print(round(os.path.getsize(i) / 10**6, 2) )"
+    "math.ceil(3.4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Re-Writing the email function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def send_mail():\n",
+    "    send = []\n",
+    "    for i in clients.index:\n",
+    "        for j in next(os.walk('.'))[1]:\n",
+    "            if clients.Nombre.loc[i] in j:\n",
+    "                c_name = clients.Nombre.loc[i]\n",
+    "                c_email = clients.Email.loc[i]\n",
+    "                folder = j\n",
+    "                msg = MIMEMultipart()\n",
+    "                msg['Subject'] = 'Ultrasound Imagery'\n",
+    "                msg['From'] = 'fapb88ve@gmail.com'\n",
+    "                msg['To'] = c_email\n",
+    "                txt = \"\"\"Hello {}! \n",
+    "                \\nThese are the pictures from your session.\n",
+    "                \\nShare your experience and enjoy a 15% discount on your next visit. \n",
+    "                \\nClick here to reedem: https://goo.gl/rC3z9H\n",
+    "            \n",
+    "                \\nWish you all the best! Come back soon :)\n",
+    " \n",
+    "                \\nThanks\n",
+    "                \\nPancita’s Team\n",
+    "                \\nwww.pancitas.com\n",
+    "                \\n(305) 542-9931\"\"\"\n",
+    "                text = MIMEText(txt.format(c_name))\n",
+    "                \n",
+    "                msg.attach(text)\n",
+    "                os.chdir('.\\\\'+folder)\n",
+    "                folder_size = round(os.path.getsize(os.getcwd()) / 10**6, 2) \n",
+    "                if folder_size => 25:\n",
+    "                    files = os.listdir(os.getcwd())\n",
+    "                    size = [round(os.path.getsize(i) / 10**6, 2) for i in files]\n",
+    "                    df_size = pd.DataFrame({'file' : files, 'size': size})\n",
+    "                    df_size['cumsum'] = np.cumsum(df_size.size)\n",
+    "                    for y in df.index:\n",
+    "                        tot_size = df_size.size.loc[:y]\n",
+    "                        if np.cumsum(tot_size) =< 25:\n",
+    "                            pass\n",
+    "                        elif np.cumsum(tot_size) > 25:\n",
+    "                            tot_size = tot_size.loc[: y - 1]\n",
+    "                            for l in tot_size.file:\n",
+    "                                if 'mp4' in l:\n",
+    "                                    part = MIMEBase('application', \"octet-stream\")\n",
+    "                                    fo=open(l,\"rb\")\n",
+    "                                    part.set_payload(fo.read() )\n",
+    "                                    Encoders.encode_base64(part)\n",
+    "                                    part.add_header('Content-Disposition', 'attachment; filename=\"%s\"' % os.path.basename(l))\n",
+    "                                    msg.attach(part)\n",
+    "                                if 'JPG' in l:\n",
+    "                                    img_data = open(l, 'rb').read()\n",
+    "                                    image = MIMEImage(img_data, name=os.path.basename(l))\n",
+    "                                    msg.attach(image)\n",
+    "                            s = smtplib.SMTP('smtp.gmail.com', 587)\n",
+    "                            s.ehlo()\n",
+    "                            s.starttls()\n",
+    "                            s.login('fapb88ve@gmail.com', 'rabbitrun88ve')\n",
+    "                            s.sendmail('fapb88ve@gmail.com', c_email, msg.as_string())\n",
+    "                            s.quit()\n",
+    "                            os.chdir('..')\n",
+    "                else:\n",
+    "                    files = os.listdir(os.getcwd())\n",
+    "                    for l in tot_size.file:\n",
+    "                                if 'mp4' in l:\n",
+    "                                    part = MIMEBase('application', \"octet-stream\")\n",
+    "                                    fo=open(l,\"rb\")\n",
+    "                                    part.set_payload(fo.read() )\n",
+    "                                    Encoders.encode_base64(part)\n",
+    "                                    part.add_header('Content-Disposition', 'attachment; filename=\"%s\"' % os.path.basename(l))\n",
+    "                                    msg.attach(part)\n",
+    "                                if 'JPG' in l:\n",
+    "                                    img_data = open(l, 'rb').read()\n",
+    "                                    image = MIMEImage(img_data, name=os.path.basename(l))\n",
+    "                                    msg.attach(image)\n",
+    "                    s = smtplib.SMTP('smtp.gmail.com', 587)\n",
+    "                    s.ehlo()\n",
+    "                    s.starttls()\n",
+    "                    s.login('fapb88ve@gmail.com', 'rabbitrun88ve')\n",
+    "                    s.sendmail('fapb88ve@gmail.com', c_email, msg.as_string())\n",
+    "                    s.quit()\n",
+    "                    os.chdir('..')\n",
+    "                    \n",
+    "                    \n",
+    "                    \n",
+    "                    \n",
+    "                        \n",
+    "                    \n",
+    "                \n",
+    "                \n"
    ]
   }
  ],
